解决不能放回数据问题
