# app/swagger/indexer.yaml
@@ -49,11 +49,13 @@ paths:
               contents:
                 description: 推送内容
                 type: string
-              alert:
-
       responses:
         200:
           description: OK
+          schema:
+            $ref: '#/definitions/ApiResponse'
+        400:
+          description: Persons couldn't have been created.
 
 
   /persons:
@@ -73,7 +75,7 @@ paths:
         200:
           description: A list of Person
           schema:
-            $ref: '#/definitions/Persons'
+            $ref: '#/definitions/ApiResponse'
 
 
     post:
@@ -88,6 +90,8 @@ paths:
       responses:
         204:
           description: Persons succesfully created.
+          schema:
+            $ref: '#/definitions/ApiResponse'
         400:
           description: Persons couldn't have been created.
 
@@ -106,7 +110,7 @@ paths:
         200:
           description: A Person
           schema:
-            $ref: '#/definitions/Person'
+            $ref: '#/definitions/ApiResponse'
         404:
           description: The Person does not exists.
 
@@ -130,6 +134,25 @@ definitions:
     properties:
       code:
         type: string
+      message:
+        type: string
+  ApiResponse:
+    type: object
+    properties:
+      status:
+        type: integer
+        format: int32
+      data:
+        type: string
+      message:
+        type: string
+
+  ErrorResponse:
+    type: object
+    properties:
+      status:
+        type: integer
+        format: int32
       message:
         type: string
 responses:
